--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,13 @@ eggs/
 .eggs/
 lib/
 lib64/
+lib64
 parts/
 sdist/
 var/
 wheels/
 share/python-wheels/
+share/
 *.egg-info/
 .installed.cfg
 *.egg
